--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -4,4 +4,21 @@
   padding: 0;
 }
 
-// TODO
+:root {
+  --highlight: #ff57b2;
+  --heading: #f8f8f8;
+
+  --background: #1a1d23;
+
+  --info: #bbbbbb;
+  --body: #d7d7d7;
+
+  --white: #ffffff;
+}
+
+body {
+  background: var(--background);
+  color: var(--white);
+
+  font-family: inter, sans-serif;
+}
