--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -22,3 +22,12 @@ body {
 
   font-family: inter, sans-serif;
 }
+
+button {
+  cursor: pointer;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
