style: change home css

--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -1,7 +1,12 @@
 .header {
-  max-width: 1120px;
+  max-width: 75vw;
   margin: 0 auto;
   padding: 2rem 0;
 
   display: flex;
+
+  @media (max-width: 720px) {
+    max-width: 540px;
+    margin: 0 2rem;
+  }
 }
