--- a/src/styles/common.module.scss
+++ b/src/styles/common.module.scss
@@ -1,4 +1,9 @@
 .content {
-  max-width: 1120px;
+  max-width: 75vw;
   margin: 0 auto;
+
+  @media (max-width: 720px) {
+    max-width: 540px;
+    margin: 0 2rem;
+  }
 }
