--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -1,1 +1,52 @@
-// TODO
+.content {
+  a {
+    display: flex;
+    flex-direction: column;
+    margin: 2rem 0 0;
+    color: var(--heading);
+
+    transition: 0.2s color;
+
+    &:hover {
+      color: var(--highlight);
+    }
+  }
+
+  a + a {
+    margin: 4rem 0 0;
+  }
+
+  h2 {
+    color: var(--body);
+    font-size: 1.2rem;
+    font-weight: 400;
+    margin: 1rem 0;
+  }
+
+  button {
+    color: var(--highlight);
+    background: transparent;
+    font-size: 1rem;
+    font-weight: 600;
+    margin: 2rem 0;
+    border: 0;
+
+    transition: 0.2s color;
+
+    &:hover {
+      color: var(--heading);
+    }
+  }
+}
+
+.info {
+  span {
+    font-size: 0.9rem;
+    color: var(--body);
+    margin: 0 1.5rem 0 0;
+
+    svg {
+      margin: 0 0.3rem 0 0;
+    }
+  }
+}
