--- a/src/pages/post/post.module.scss
+++ b/src/pages/post/post.module.scss
@@ -21,7 +21,7 @@
 }
 
 .info {
-  color: var(--body);
+  color: var(--info);
   margin: 0 0 3rem;
 
   span,
@@ -33,4 +33,33 @@
       margin: 0 0.5rem 0 0;
     }
   }
+}
+
+.pagination {
+  border-top: 2px solid var(--bar);
+  margin: 2rem 0;
+
+  display: flex;
+  justify-content: space-between;
+
+  div {
+    margin: 1rem 0;
+    display: flex;
+    flex-direction: column;
+
+    span {
+      font-size: 1.5rem;
+      font-weight: 600;
+    }
+
+    a {
+      color: var(--highlight);
+      font-size: 1.2rem;
+      font-weight: 600;
+    }
+  }
+}
+
+.next {
+  text-align: end;
 }
