feat: finished :tada:

--- a/src/pages/post/post.module.scss
+++ b/src/pages/post/post.module.scss
@@ -35,6 +35,14 @@
   }
 }
 
+.edit {
+  margin: 0.7rem 0.5rem;
+
+  time {
+    font-size: 0.9rem;
+  }
+}
+
 .pagination {
   border-top: 2px solid var(--bar);
   margin: 2rem 0;
